Add simple models and base import operation

--- a/Sudoku/Sudoku.MVC/Sudoku.MVC.csproj
+++ b/Sudoku/Sudoku.MVC/Sudoku.MVC.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sudoku.Application\Sudoku.Application.csproj" />
+    <ProjectReference Include="..\Sudoku.Core\Sudoku.Core.csproj" />
+    <ProjectReference Include="..\Sudoku.Infrastructure\Sudoku.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
