--- a/Sudoku/Sudoku.Application/Sudoku.Application.csproj
+++ b/Sudoku/Sudoku.Application/Sudoku.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sudoku.Core\Sudoku.Core.csproj" />
+  </ItemGroup>
+
 </Project>
